# model-catalog-api

./: .deploy  .deploy.sh  .docker_push  .gitignore  .openapi-generator-ignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  README.md  VERSION  codegen.ts  fix-any-of.sh  generate-client.sh  generate-server-v0.sh  generate-server-v1.sh  generate-server.sh  mkdocs.yml  model-catalog-v0.0.1.yaml  model-catalog-v0.0.2.yaml  model-catalog-v1.0.0.yaml  model-catalog.yaml  openapi-generator-ignore  openapi.yaml  package-lock.json  package.json  pyproject.toml  save-changes.sh  test.py  tsconfig.json  update.sh  vitest.config.ts  vitest.e2e.config.ts
docs/: diagram.dsl  index.md  markdown.md  presentation-nov-8.md
properties/: ConfigurationSetup.txt  DataTransformation.txt  DataTransformationSetup.txt  DatasetSpecification.txt  HybridModel.txt  Image.txt  ModelConfiguration.txt  ModelConfigurationSetup.txt  NumericalIndex.txt  Parameter.txt  SampleCollection.txt  SoftwareConfiguration.txt  SoftwareImage.txt  SoftwareVersion.txt  VariablePresentation.txt
server/: .env  .env.sample  Dockerfile  Dockerfile.docs  Dockerfile_swagger_ui  Pipfile  README.md  build_database.py  build_database.sh  config.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  git_push.sh  init.sh  logging.yaml  openapi.json  requirements.txt  setup.py  (+3 more)
server-v0.0.1/: Pipfile  requirements.txt  setup.py
server-v0.0.2/: .env  .gitignore  Dockerfile  Pipfile  docker-compose.local.yml  setup.py
server-v1.0.0/: Pipfile  README.md  setup.py
(+478 files in other folders)
