[tool.poetry]
name = "model-catalog-api"
version = "0.1.0"
description = "API for MINT Model Catalog"
authors = ["Maximilinano Osorio <mosorio@isi.edu>"]

[[tool.poetry.source]]
name = 'pypi-public'
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.9"
connexion = "2.6.0"
pythonql3 = "0.9.61"
obasparql = "4.0.6"
werkzeug = "0.16.1"
swagger-ui-bundle = "0.0.2"
jsonschema = "3.2.0"    
python_dateutil = "^2.6.0"
validators = "0.15.0"
python-jose = "3.3.0"
python-dotenv = "*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
